@@ -1,21 +1,14 @@
 [Package
     {name = "base",
-     import_dirs = ["../../base/admin",
-		    "../../base/errors",
-		    "../../base/general",
-		    "../../base/graphs",
-		    "../../base/state",
-		    "../../base/syms",
-		    "../../base/syntax",
-		    "../../base/sysdep"],
+     import_dirs = [@IMPORT_DIRS@],
      source_dirs = [],
-     library_dirs = [],
-     hs_libraries = [],
+     library_dirs = [@LIBRARY_DIRS@],
+     hs_libraries = ["ctk"],
      extra_libraries = [],
      include_dirs = [],
      c_includes = [],
-     package_deps = [],
+     package_deps = [@PACKAGES_STRINGS@],
      extra_ghc_opts = [],
      extra_cc_opts = [],
-     extra_ld_opts = []},
+     extra_ld_opts = []}
 ]
