@@ -1,0 +1,16 @@
+[
+Package {
+  name = "c2hs",
+  import_dirs = ["@LIBDIR@/c2hs-@C2HS_VERSION@/@SYS@/import"],
+  source_dirs = [],
+  library_dirs = ["@LIBDIR@/c2hs-@C2HS_VERSION@/@SYS@"],
+  hs_libraries = ["c2hs"],
+  extra_libraries = [],
+  include_dirs = [],
+  c_includes = [],
+  package_deps = ["lang"],
+  extra_ghc_opts = ["-fglasgow-exts"],
+  extra_cc_opts = [],
+  extra_ld_opts = []
+}
+]
